@@ -98,6 +98,8 @@
 
 * Emulates Microhobby Pokeador Automatico
 
+* Emulates Dinamic SD1 emulation
+
 * Emulates Datagear/MB02 DMA, ZX-Uno DMA
 
 * Emulates +3 Disk
