@@ -98,6 +98,8 @@
 
 * Emula Microhobby Pokeador Automático
 
+* Emula Dinamic SD1
+
 * Emula Datagear/MB02 DMA, ZX-Uno DMA
 
 * Emula Disco +3
