@@ -18,6 +18,7 @@ Added new emulated machines:
 Added Hilow Barbanegra emulation
 Added Transtape emulation
 Added Microhobby Pokeador Automatico emulation
+Added Dinamic SD1 emulation
 Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
 Added ZSF support for Timex TS2068, MK14, Chrome, Prism, Chloe, Sam Coupe
 Added path setting where to download files from the speccy and zx81 online browser
